fix nav height not collapsing in lower queries

--- a/static/css/financial.css
+++ b/static/css/financial.css
@@ -7,7 +7,7 @@
   height: fill;
   display: grid;
   grid-template-columns: 1fr;
-  grid-auto-rows: minmax(50px, auto) minmax(50px, auto) minmax(50px, auto) minmax(50px, auto) minmax(50px, auto);
+  grid-auto-rows: minmax(50px, auto) minmax(0px, auto) minmax(50px, auto) minmax(50px, auto) minmax(50px, auto);
   grid-template-areas:
   "header"
   "nav"
